docs/api/qiskit/0.43/qiskit.providers.ProviderV1.mdx
---
title: ProviderV1 (v0.43)
description: API reference for qiskit.providers.ProviderV1 in qiskit v0.43
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.ProviderV1
---

# ProviderV1

<Class id="qiskit.providers.ProviderV1" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/providers/provider.py" signature="ProviderV1" modifiers="class">
  Bases: [`Provider`](qiskit.providers.Provider "qiskit.providers.provider.Provider"), `ABC`

  Base class for a Backend Provider.

  ## Methods

  <span id="qiskit-providers-providerv1-backends" />

  ### backends

  <Function id="qiskit.providers.ProviderV1.backends" signature="ProviderV1.backends(name=None, **kwargs)" modifiers="abstract">
    Return a list of backends matching the specified filtering.

    **Parameters**

    *   **name** (*str*) – name of the backend.
    *   **\*\*kwargs** – dict used for filtering.

    **Returns**

    **a list of Backends that match the filtering**

    criteria.

    **Return type**

    list\[[Backend](qiskit.providers.Backend "qiskit.providers.Backend")]
  </Function>

  <span id="qiskit-providers-providerv1-get-backend" />

  ### get\_backend

  <Function id="qiskit.providers.ProviderV1.get_backend" signature="ProviderV1.get_backend(name=None, **kwargs)">
    Return a single backend matching the specified filtering.

    **Parameters**

    *   **name** (*str*) – name of the backend.
    *   **\*\*kwargs** – dict used for filtering.

    **Returns**

    a backend matching the filtering.

    **Return type**

    [Backend](qiskit.providers.Backend "qiskit.providers.Backend")

    **Raises**

    [**QiskitBackendNotFoundError**](qiskit.providers.QiskitBackendNotFoundError "qiskit.providers.QiskitBackendNotFoundError") – if no backend could be found or more than one backend matches the filtering criteria.
  </Function>

  ## Attributes

  ### version

  <Attribute id="qiskit.providers.ProviderV1.version" attributeValue="1" />
</Class>

